[package]
name = "elite-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
duckdb = { version = "1.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
rayon = "1.10"
indicatif = "0.17"

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = [
    "Win32_System_RestartManager",
    "Win32_Foundation"
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
